--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.4.5",
+    "@react-spring/web": "^9.4.5",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "lax.js": "^2.0.3",
+    "lax.ts": "^2.0.3",
     "next": "12.1.6",
     "node-sass": "^7.0.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-spring": "^9.4.5",
+    "use-lax": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.41",
