--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
     "@svgr/webpack": "^6.2.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "lax.js": "^2.0.3",
     "lax.ts": "^2.0.3",
     "next": "12.1.6",
     "node-sass": "^7.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-input-mask": "^2.0.4",
     "react-spring": "^9.4.5",
     "use-lax": "^4.0.4",
-    "vanta": "^0.5.22"
+    "vanta": "^0.5.22",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/react-input-mask": "^3.0.1",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.3"
